2009-02-19  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #25645.
	* include/avr/iox256a3b.h: Change PR register to PRGEN because this
	conflicts with a #defined symbol.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox128a1.h: Same.
	* include/avr/iox64a3.h: Same.
	* include/avr/iox64a1.h: Same.
	* NEWS: Add item to fixed bug list.

2009-02-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Bob Paddock:
	(part of) patch #6720: FAQ update. Add EEPROM section, baud rate section.
	Correct spelling.
	* doc/api/faq.dox: Spelling fixes, remove trailing white space.

2009-02-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Bob Paddock:
	(part of) patch #6720: FAQ update. Add EEPROM section, baud rate section.
	Correct spelling.
	* doc/api/faq.dox (faq_eeprom_corruption, faq_wrong_baud_rate): new
	entries.

2009-02-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/power.h: Add ATmega128RFA1.
	* include/avr/sleep.h: (Ditto.)

2009-02-16  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix repository breakage. Thanks to Anatoly.
	* configure.ac: Test for xmega2 architecture. Fix architecture type.
	* devtools/gen-avr-lib-tree.sh: Add missing semicolons.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #25261.
	* include/avr/iotn48.h: Add register TWHSR. Deprecate register TWIHSR.
	* NEWS: Add item to fixed bug list.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix bug #25535.
	* include/avr/iotn88.h: Remove AREFD, REFS1 bit definitions.
	* include/avr/iotn48.h: Same.
	* NEWS: Add item.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sleep.h: Add support for ATxmega32D4, ATxmega16A4,
	ATxmega16D4.

2009-02-13  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATxmega32D4, ATxmega16A4, ATxmega16D4.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/Makefile.am: Same.
	* include/io.h: Same.